Fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body {
     margin: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: 'Dr Sugiyama', cursive;
     color: #F4FFF8;
 }
@@ -17,11 +18,14 @@ h1 {
     margin: 0;
 }
 
-h2 {
-    margin: 10px;
+#about h1 {
+    margin-top: -10%;
 }
 
-p, table, figcaption, ul {
+p,
+table,
+figcaption,
+ul {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: #F4FFF8;
@@ -47,7 +51,9 @@ a:visited {
 #container {
     display: grid;
     grid-template-columns: 6fr repeat(3, 1fr) 2fr;
-    grid-template-rows:  0.5fr 9fr;
+    grid-template-rows: 0.25fr 9fr;
+    height: 100vh;
+    overflow: hidden;
 }
 
 #about {
@@ -95,7 +101,7 @@ header {
 main {
     grid-column: 1 / 3;
     grid-row: 2 / 4;
-    margin: 10px 10px 0 0;
+    margin: 10px 10px 0 10px;
 }
 
 aside {
@@ -157,17 +163,8 @@ nav {
     border: 10px solid #F4FFF8;
 }
 
-#about h1 {
-    margin-top: -10%;
-}
-
-table {
-    margin: -10px 0 30px 0;
-}
-
 #skills-icons h2 {
     width: 60px;
-    float: left;
 }
 
 #skills-icons i {
@@ -217,7 +214,7 @@ td {
 }
 
 #portfolio figure {
-    position: relative; 
+    position: relative;
     height: 200px;
     width: 200px;
 }
@@ -230,7 +227,7 @@ td {
 
 #portfolio figcaption {
     position: absolute;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     transition: .5s ease;
     opacity: 0;
     padding: 20px;
@@ -253,10 +250,6 @@ td {
     margin: 0 20px;
     grid-row: 3 / 4;
     grid-column: 1 / 2;
-}
-
-#contact main i {
-    padding: 5px;
 }
 
 #contact aside {
@@ -288,7 +281,7 @@ td {
 /* MEDIA QUERIES */
 /*****************/
 
-@media only screen and (max-width: 850px){
+@media only screen and (max-width: 850px) {
 
     /********/
     /* GRID */
@@ -297,6 +290,7 @@ td {
     #container {
         display: flex;
         flex-direction: column;
+        overflow: visible;
     }
 
     /*************/
@@ -340,7 +334,8 @@ td {
     /* SPECIFIC */
     /************/
 
-    p, table {
+    p,
+    table {
         font-size: 16px;
     }
 
@@ -351,23 +346,5 @@ td {
     #contact img {
         display: inline;
         width: 100px;
-    }
-}
-
-@media only screen and (max-width: 320px){
-    table {
-        width: 300px;
-    }
-
-    #about aside {
-        width: 315px;
-    }
-
-    #about * img {
-        width: 90%;
-    }
-
-    #contact main i {
-        font-size: 3.5em;
     }
 }
